<resources>
    <string name="app_name">C2C</string>
    <string name="don_t_have_an_account">Don\'t Have an Account \?</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="username">UserName</string>
    <string name="login">Login</string>
    <string name="title_activity_service_providermain">ServiceProvidermainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">abc123@gmail.com</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="profile">Profile</string>

</resources>